--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <input type="text" id="beatTitle" name="beatTitle" required>
                 
                 <label for="beatFile">Upload File:</label>
-                <input type="file" id="beatFile" name="beatFile" accept="audio/*" required>
+                <input type="file" id="beatFile" name="beatFile" accept=".wav" required>
                 
                 <button type="submit">Upload</button>
             </form>
