--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#features">Features</a></li>
                 <li><a href="#upload">Upload</a></li>
+                <li><a href="#discover">Discover</a></li>
                 <li><a href="#profile">Profile</a></li>
             </ul>
         </nav>
@@ -44,6 +45,26 @@
                 
                 <button type="submit">Upload</button>
             </form>
+        </section>
+        <section id="discover">
+            <h2>Discover Beats</h2>
+            <p>Browse and preview beats uploaded by talented producers.</p>
+            <div id="beatGallery">
+                <div class="beatItem">
+                    <p>Beat Title: Energetic Vibes</p>
+                    <audio controls>
+                        <source src="path-to-wav-file.wav" type="audio/wav">
+                        Your browser does not support audio playback.
+                    </audio>
+                </div>
+                <div class="beatItem">
+                    <p>Beat Title: Chill Groove</p>
+                    <audio controls>
+                        <source src="path-to-another-file.wav" type="audio/wav">
+                        Your browser does not support audio playback.
+                    </audio>
+                </div>
+            </div>
         </section>
         <section id="profile">
             <h2>Your Profile</h2>
