--- a/index.html
+++ b/index.html
@@ -49,22 +49,7 @@
         <section id="discover">
             <h2>Discover Beats</h2>
             <p>Browse and preview beats uploaded by talented producers.</p>
-            <div id="beatGallery">
-                <div class="beatItem">
-                    <p>Beat Title: Energetic Vibes</p>
-                    <audio controls>
-                        <source src="path-to-wav-file.wav" type="audio/wav">
-                        Your browser does not support audio playback.
-                    </audio>
-                </div>
-                <div class="beatItem">
-                    <p>Beat Title: Chill Groove</p>
-                    <audio controls>
-                        <source src="path-to-another-file.wav" type="audio/wav">
-                        Your browser does not support audio playback.
-                    </audio>
-                </div>
-            </div>
+            <div id="beatGallery"></div>
         </section>
         <section id="profile">
             <h2>Your Profile</h2>
@@ -77,3 +62,4 @@
     <script src="script.js" defer></script>
 </body>
 </html>
+   
