--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>MookBeatz</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
+    <script src="https://js.stripe.com/v3/"></script> <!-- Stripe SDK -->
+    <script src="https://www.paypal.com/sdk/js?client-id=your-client-id-here&currency=USD"></script> <!-- PayPal SDK -->
 </head>
 <body>
     <header>
@@ -39,10 +41,26 @@
             <form id="uploadForm">
                 <label for="beatTitle">Beat Title:</label>
                 <input type="text" id="beatTitle" name="beatTitle" required>
-                
+
+                <label for="beatGenre">Genre:</label>
+                <input type="text" id="beatGenre" name="beatGenre" required>
+
+                <label for="beatMood">Mood:</label>
+                <input type="text" id="beatMood" name="beatMood" required>
+
+                <label for="licenseType">License Type:</label>
+                <select id="licenseType" name="licenseType" required>
+                    <option value="basic">Basic Lease</option>
+                    <option value="premium">Premium Lease</option>
+                    <option value="exclusive">Exclusive Rights</option>
+                </select>
+
+                <label for="price">Price (in USD):</label>
+                <input type="number" id="price" name="price" min="1" step="1" required>
+
                 <label for="beatFile">Upload File:</label>
                 <input type="file" id="beatFile" name="beatFile" accept=".wav" required>
-                
+
                 <button type="submit">Upload</button>
             </form>
         </section>
@@ -62,4 +80,3 @@
     <script src="script.js" defer></script>
 </body>
 </html>
-   
