--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- Header Section -->
     <header>
-        <img src="images/logo.png" alt="Official MookBeatz Logo for branding" id="siteLogo">
+        <img src="C:/Users/PC/Pictures/logo/logo.png" alt="Official MookBeatz Logo for branding" id="siteLogo">
         <h1>MookBeatz</h1>
         <nav aria-label="Primary Navigation">
             <ul>
@@ -85,7 +85,7 @@
 
     <!-- Footer Section -->
     <footer>
-        <img src="images/logo.png" alt="Official MookBeatz Logo for branding" id="footerLogo">
+        <img src="C:/Users/PC/Pictures/logo/logo.png" alt="Official MookBeatz Logo for branding" id="footerLogo">
         <p>© 2025 MookBeatz - Designed by Mook B</p>
     </footer>
 
