--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <title>CreatorSync</title>
 
+    <!-- ✅ Link to Stylesheet -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -45,10 +46,20 @@
 
     <!-- 🔥 Main Content -->
     <main>
-        <!-- ✅ About Section -->
+        <!-- ✅ About Section - Updated with CreatorSync Branding -->
         <section id="about">
             <h2>About CreatorSync</h2>
-            <p>Welcome to CreatorSync, your ultimate platform for uploading, discovering, and selling high-quality beats!</p>
+            <p>
+                Welcome to <strong>CreatorSync</strong>, the ultimate hub for producers, artists, and music enthusiasts to 
+                <strong>upload, discover, and sell high-quality beats</strong>.  
+                Our platform empowers creators by providing seamless tools for showcasing their work, 
+                licensing tracks, and connecting with buyers effortlessly.  
+            </p>
+            <p>
+                Whether you're an established producer or just starting, <strong>CreatorSync</strong> helps 
+                turn creativity into opportunity—with secure payments, instant licensing, and a vibrant 
+                community of like-minded musicians.
+            </p>
         </section>
 
         <!-- ✅ Features Section -->
@@ -102,6 +113,7 @@
         <p>© 2025 CreatorSync - Designed by Mook B</p>
     </footer>
 
+    <!-- ✅ Load JavaScript for Interactive Features -->
     <script src="script.js" defer></script>
 </body>
 </html>
