Integrate The Finisher as embedded web app within CreatorSync
 Major Integration Features:
- Added The Finisher navigation link with PRO badge and styling
- Created dedicated Finisher integration page (finisher-app.html)
- Implemented subscription-based access control with upgrade prompts
- Built comprehensive integration support (iframe, API, desktop)
- Added real-time Socket.IO communication between apps
- Created seamless authentication bridge with token passing

 Technical Implementation:
- finisher-app.html: Complete integration interface with multiple embed options
- finisher-integration.css: Professional styling for integration page
- finisher-integration.js: Full integration logic with subscription checks
- Enhanced navigation with attractive Finisher link and PRO badge
- Server-side Socket.IO handlers for Finisher collaboration
- Subscription verification API integration

 Business Model Integration:
- CreatorSync serves as funnel for The Finisher subscriptions
- Three-tier pricing model (Starter .99, Pro .99, Enterprise .99)
- Seamless upgrade flow from free CreatorSync to paid Finisher access
- Real-time project sync and collaboration between platforms
- Professional integration ready for existing Finisher app deployment

 User Experience:
- One-click access to The Finisher from main navigation
- Automatic subscription verification and access control
- Multiple integration methods for flexible deployment
- Real-time collaboration and project synchronization
- Unified authentication and user session management

The Finisher is now fully integrated as a premium feature within CreatorSync!

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,11 @@
                 <a href="#sounds" class="nav-link">Sounds</a>
                 <a href="#studio" class="nav-link">Studio</a>
                 <a href="#marketplace" class="nav-link">Marketplace</a>
+                <a href="#finisher" class="nav-link finisher-link" id="finisherNavLink">
+                    <i class="fas fa-magic"></i>
+                    The Finisher
+                    <span class="pro-badge">PRO</span>
+                </a>
             </div>
             
             <div class="nav-auth">
