--- a/public/index.html
+++ b/public/index.html
@@ -519,6 +519,12 @@
     <div class="toast-container" id="toastContainer"></div>
 
     <!-- Scripts -->
+    <script>
+        // Reset language to English by default
+        if (!localStorage.getItem('creatorSync_language') || localStorage.getItem('creatorSync_language') === 'de') {
+            localStorage.setItem('creatorSync_language', 'en');
+        }
+    </script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/translation.js"></script>
     <script src="js/app.js"></script>
