Improve header proportions, add larger logo, smaller nav buttons, and dynamic hero text with gradient animations

--- a/public/index.html
+++ b/public/index.html
@@ -95,10 +95,13 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
-            <h1 class="hero-title" data-translate="hero.title">Monetize Your Musical Vision</h1>
-            <p class="hero-subtitle" data-translate="hero.subtitle">
-                The ultimate platform for producers and artists to sell beats,
-                license tracks, and collaborate in real-time.
+            <h1 class="hero-title hero-title-dynamic" data-translate="hero.title">
+                <span class="gradient-text">Transform</span> Your Sound Into
+                <span class="gradient-text typing-effect">Revenue</span>
+            </h1>
+            <p class="hero-subtitle hero-subtitle-enhanced" data-translate="hero.subtitle">
+                Where <strong>producers thrive</strong>, <strong>artists connect</strong>, and <strong>beats sell</strong>.
+                <span class="highlight-text">License tracks, collaborate live, and build your empire</span> — all in one powerful platform.
             </p>
             <div class="hero-actions">
                 <button class="btn btn-primary btn-lg" data-translate="hero.startCreating">
