Enhance Finisher logo visibility for accessibility: make upgrade section logo XL and clickable, update header to static 'Get' text with larger clickable logo navigation

--- a/public/index.html
+++ b/public/index.html
@@ -79,10 +79,12 @@
             <div class="nav-auth">
                 <button class="btn btn-outline" id="loginBtn" data-translate="nav.login">Login</button>
                 <button class="btn btn-secondary" id="signupBtn" data-translate="nav.signup">Sign Up</button>
-                <button class="btn btn-primary finisher-cta-btn" id="finisherBtn" data-translate="nav.getFinisher">
-                    <span>Get</span>
-                    <img src="assets/finisher-logo.png" alt="The Finisher" class="btn-finisher-logo">
-                </button>
+                <div class="finisher-header-cta">
+                    <span class="get-text">Get</span>
+                    <a href="finisher-app.html" class="finisher-logo-nav-link" title="Open The Finisher">
+                        <img src="assets/finisher-logo.png" alt="The Finisher" class="btn-finisher-logo-large logo-glow interactive-logo">
+                    </a>
+                </div>
                 <div class="language-selector">
                     <select id="languageSelect" title="Select Language">
                         <option value="en">🇺🇸 English</option>
@@ -229,7 +231,9 @@
                 <div class="finisher-text">
                     <div class="finisher-header-logo">
                         <h2>Upgrade to</h2>
-                        <img src="assets/finisher-logo.png" alt="The Finisher" class="finisher-logo-large logo-glow interactive-logo logo-echo">
+                        <a href="finisher-app.html" class="finisher-logo-link" title="Open The Finisher">
+                            <img src="assets/finisher-logo.png" alt="The Finisher" class="finisher-logo-xlarge logo-glow interactive-logo logo-echo">
+                        </a>
                     </div>
                     <p class="finisher-subtitle">
                         Take your music production to the next level with our professional-grade suite of tools and services.
